# Remora

./: CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  quick_ref.html  search.html  searchindex.js  todo.txt
Test/: CMakeLists.txt  axis.cpp  cholesky.cpp  compressed_matrix.cpp  compressed_vector.cpp  conv2d.cpp  dense.cpp  eigensymm.cpp  expression_optimizer.cpp  expressions.cpp  general_solve.cpp  getrf.cpp  gpu_cholesky.cpp  gpu_conv2d.cpp  gpu_copy.cpp  gpu_dense.cpp  gpu_matrix_assign.cpp  gpu_matrix_expression.cpp  gpu_matrix_proxy.cpp  gpu_prod.cpp  gpu_random.cpp  gpu_syrk.cpp  gpu_triangular_prod.cpp  gpu_triangular_solve.cpp  gpu_vector_assign.cpp  gpu_vector_expression.cpp  gpu_vector_proxy.cpp  gpu_vector_set_expression.cpp  hip_cholesky.cpp  hip_copy.cpp  hip_dense.cpp  hip_matrix_assign.cpp  hip_matrix_expression.cpp  hip_prod.cpp  hip_random.cpp  hip_syrk.cpp  hip_triangular_prod.cpp  hip_triangular_solve.cpp  hip_vector_assign.cpp  hip_vector_expression.cpp  (+35 more)
_sources/: index.rst.txt  index.txt  quick_ref.rst.txt  quick_ref.txt
doc/: CMakeLists.txt
doc/sphinx_pages/: conf.py.in  index.tut  quick_ref.rst
doc/tutToRst/: tut2rst.cpp
examples/: CMakeLists.txt  linear_regression.tpp
examples/Benchmarks/: Timer.hpp  conv2d.cpp  gemm.cpp  gpu_conv2d.cpp  opencl_conv2d.cpp  potrf.cpp  syrk.cpp  trmm.cpp
include/: CMakeLists.txt
include/remora/: assignment.hpp  blas.h  blas.hpp  decompositions.hpp  dense.hpp  device_copy.hpp  expression_types.hpp  expressions.hpp  io.hpp  matrix.hpp  matrix_expression.hpp  matrix_proxy.hpp  matrix_sparse.hpp  permutation.hpp  proxy_expressions.hpp  random.hpp  remora.hpp  solve.hpp  sparse.hpp  triangular_matrix.hpp  vector.hpp  vector_expression.hpp  vector_sparse.hpp
include/remora/cpu/: dense.hpp  iterator.hpp  sparse.hpp  sparse_matrix.hpp  traits.hpp
include/remora/detail/: axis.hpp  expression_classes.hpp  expression_optimizers.hpp  functional.hpp  integer_list.hpp  iterator.hpp  matrix_expression_classes.hpp  matrix_proxy_classes.hpp  merge_proxy.hpp  proxy_optimizers_fwd.hpp  shape.hpp  storage.hpp  structure.hpp  traits.hpp  vector_expression_classes.hpp  vector_proxy_classes.hpp
include/remora/gpu/: copy.hpp  dense.hpp  iterators.hpp  matrix.hpp  matrix_proxy.hpp  matrix_proxy_classes.hpp  traits.hpp  vector.hpp  vector_proxy.hpp
include/remora/hip/: buffer.hpp  copy.hpp  cublas_backend.hpp  dense.hpp  device.hpp  exception.hpp  traits.hpp
include/remora/kernels/: assign.hpp  conv2d.hpp  device_traits.hpp  dot.hpp  fold_rows.hpp  gemm.hpp  gemv.hpp  matrix_assign.hpp  matrix_fold.hpp  potrf.hpp  random.hpp  reduce.hpp  sum_rows.hpp  syrk.hpp  trmm.hpp  trmv.hpp  trsm.hpp  trsv.hpp  vector_assign.hpp  vector_fold.hpp  vector_max.hpp
include/remora/kernels/cblas/: cblas_inc.hpp  dense_gemm.hpp  gemm.hpp  trsm.hpp  trsv.hpp
include/remora/kernels/clBlast/: conv2d.hpp  gemm.hpp  gemv.hpp  syrk.hpp  trmm.hpp  trmv.hpp  trsm.hpp  trsv.hpp
include/remora/kernels/clblas/: trsm.hpp  trsv.hpp
include/remora/kernels/default/: assign.hpp  conv2d.hpp  dense_gemm.hpp  device_traits.hpp  dot.hpp  gemm.hpp  gemv.hpp  getrf.hpp  matrix_assign.hpp  mgemm.hpp  potrf.hpp  pstrf.hpp  random.hpp  reduce.hpp  simd.hpp  simple_proxies.hpp  syev.hpp  syrk.hpp  tpmv.hpp  trmm.hpp  trmv.hpp  trsm.hpp  trsv.hpp  vector_assign.hpp
include/remora/kernels/gpu/: gemm.hpp  gemv.hpp  matrix_assign.hpp  matrix_fold.hpp  random.hpp  sum_rows.hpp  syrk.hpp  trmm.hpp  trmv.hpp  trsm.hpp  trsv.hpp  vector_assign.hpp  vector_fold.hpp
include/remora/kernels/hip/: fold_rows.hpp  matrix_assign.hpp  random.hpp  syrk.hpp  trmm.hpp  trmv.hpp  trsm.hpp  trsv.hpp  vector_assign.hpp  vector_fold.hpp  vector_max.hpp
include/remora/kernels/opencl/: dot.hpp  fold_rows.hpp  gemm.hpp  gemv.hpp  matrix_assign.hpp  matrix_fold.hpp  potrf.hpp  syrk.hpp  trmm.hpp  trmv.hpp  trsm.hpp  trsv.hpp  vector_assign.hpp  vector_fold.hpp  vector_max.hpp
include/remora/opencl/: dense.hpp
